--- a/chuchman/mpage/templates/mpage/index.html
+++ b/chuchman/mpage/templates/mpage/index.html
@@ -23,13 +23,13 @@
             <div class="header-lang">
                 <div class="lang-block">
                     <div class="lang-text">
-                        <a class="lang-text-p" href="http://127.0.0.1:8000/ua">Українська</a>
+                        <a class="lang-text-p" href="/ua">Українська</a>
                     </div>
                     <div class="lang-text">
-                        <a class="lang-text-p" href="http://127.0.0.1:8000/">Русский</a>
+                        <a class="lang-text-p" href="">Русский</a>
                     </div>
                     <div class="lang-text">
-                        <a class="lang-text-p" href="http://127.0.0.1:8000/en">English</a>
+                        <a class="lang-text-p" href="/en">English</a>
                     </div>
                 </div>
             </div>
