--- a/chuchman/mpage/templates/mpage/index-en.html
+++ b/chuchman/mpage/templates/mpage/index-en.html
@@ -35,17 +35,14 @@
             <div class="header-text">
                 <h1>Coronavirus-info<br /></h1>
             </div>
-            <!--
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn">Для детей</button></div>
-                        <div class="col"><button class="header-age-btn">Для подростков</button></div>
-                        <div class="col"><button class="header-age-btn">Для взрослых</button></div>
+                        <div class="col"><button class="header-age-btn" href="/en/chill">Для детей</button></div>
+                        <div class="col"><button class="header-age-btn" href="/en">Для взрослых</button></div>
                     </div>
                 </div>
             </div>
--->
         </div>
         <div class="section-1">
             <div class="container">
