--- a/chuchman/mpage/templates/mpage/index-ua-ch.html
+++ b/chuchman/mpage/templates/mpage/index-ua-ch.html
@@ -38,8 +38,8 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn" href="/ua/chill">Для детей</button></div>
-                        <div class="col"><button class="header-age-btn" href="/ua">Для взрослых</button></div>
+                        <div class="col"><button class="header-age-btn href="/ua/chill">Для дітей</button></div>
+                        <div class="col"><button class="header-age-btn href="/ua/">Для дорослих</button></div>
                     </div>
                 </div>
             </div>
@@ -59,6 +59,7 @@
                                     </div>
                                 </div>
                             </div>
+<!--
                             <div class="col-md-4 col-sm-6 col-12">
                                 <div class="menu-block scr" data-to=".section-3">
                                     <div class="menu-block-wrap">
@@ -68,6 +69,7 @@
                                     </div>
                                 </div>
                             </div>
+-->
                             <div class="col-md-4 col-sm-6 col-12">
                                 <div class="menu-block scr" data-to=".section-4">
                                     <div class="menu-block-wrap">
@@ -86,6 +88,7 @@
                                     </div>
                                 </div>
                             </div>
+<!--
                             <div class="col-md-4 col-sm-6 col-12">
                                 <div class="menu-block scr" data-to=".section-6">
                                     <div class="menu-block-wrap">
@@ -96,6 +99,7 @@
                                     </div>
                                 </div>
                             </div>
+-->
                             <div class="col-md-4 col-sm-6 col-12">
                                 <div class="menu-block scr" data-to=".section-7">
                                     <div class="menu-block-wrap">
@@ -168,6 +172,7 @@
                 </div>
             </div>
         </div>
+<!--
         <div class="section-3">
             <div class="container">
                 <div class="history">
@@ -194,6 +199,7 @@
                 </div>
             </div>
         </div>
+-->
         <div class="section-4">
             <div class="container">
                 <div class="way">
@@ -208,7 +214,7 @@
                                         <img src="{% static 'img/way1.svg' %}" alt="">
                                         <h2>
 Повітряно-крапельним шляхом</h2>
-                                        <p>Мікрокрапельки води, які буквально лізуть з хворого при чханні, містять в собі Коронавірусние інфекцію. Надихавшись таким повітрям, людина майже на 100% буде заражений</p>
+                                        <p>Мікрокапелькі води, які виділяє твій сусід, заражений коронавірусів, з дуже великим шансом тебе заразять, тому обов'язково носи маску!</p>
                                     </div>
                                 </div>
                             </div>
@@ -217,7 +223,7 @@
                                     <div class="way-wrap">
                                         <img src="{% static 'img/way2.svg' %}" alt="">
                                         <h2>Через поверхні</h2>
-                                        <p>Доведено, що вірус може жити на поверхнях різних предметів до декількох годин. На металі і пластиці вірус може виживати до 2-3 днів. Це дозволяє Коронавіруси поширюватися навіть через рукостискання.</p>
+                                        <p>Намагайся уникати Косанов поверхні так як на металі і пластиці вірус може виживати до 2-3 днів.</p>
                                     </div>
                                 </div>
                             </div>
@@ -235,7 +241,7 @@
                                     <div class="way-wrap">
                                         <img src="{% static 'img/way4.svg' %}" alt="">
                                         <h2>Через кішок</h2>
-                                        <p>Доведено, що сімейство котячих можуть бути заражені коронавірусів і також передавати його іншим особам свого виду і також людям. Рекомендується уникати контактів з бездомними кішками.</p>
+                                        <p>Ні в якому разі не контактує з бездомними кішками, так-як науково доведено, що кішки є переносниками коронавируса.</p>
                                     </div>
                                 </div>
                             </div>
@@ -249,7 +255,7 @@
                 <div class="symp">
                     <div class="symp-text">
                         <h1>Симптоматика коронавірусу</h1>
-                        <p>Увага! Якщо ви виявите у себе подібні симптоми, ми настійно рекомендуємо вам<a href="tel:103" class="med-tel">звернутися за медичною допомогою</a> і мінімізувати контакти з іншими людьми до приїзду мед. працівників</p>
+                        <p>Обов'язково розкажи батькам якщо виявиш у себе один з цих симптомів!</p>
                     </div>
                     <div class="symp-content">
                         <div class="row">
@@ -288,6 +294,7 @@
                 </div>
             </div>
         </div>
+<!--
         <div class="section-6">
             <div class="container">
                 <div class="dang">
@@ -320,6 +327,7 @@
                 </div>
             </div>
         </div>
+-->
         <div class="section-7">
             <div class="container">
                 <div class="prof">
@@ -328,14 +336,15 @@
 Профілактика коронавіруса</h1>
                     </div>
                     <div class="prof-content">
-                        <h3>Щоб уникнути зараження коронавірусів, дотримуйтесь простих правил:</h3>
+                        <h3>Ніколи не забувай кілька простих правил і коронавірусеві буде набагато складніше тебе заразити.</h3>
                         <div class="row">
                             <div class="col-lg-6 col-12">
                                 <div class="prof-block">
                                     <div class="p-wrap">
                                         <img src="{% static 'img/prof1.svg' %}" alt="">
-                                        <h4>Обрабка рук</h4>
-                                        <p>Ми постійно торкаємося руками до багатьох поверхнях, на яких може мешкати вірус, а слідом - чіпаємо особа, ніс, губи і т.д. Вірус потрапляє на слизову і людина заражається. Для запобігання цій ситуації потрібно якомога рідше чіпати руками обличчя і якомога частіше обробляти руки з милом або з антисептиком.</p>
+                                        <h4>
+гігієна</h4>
+                                        <p>Завжди мій руки по приходу з вулиці або перед їжею. На руках скупчується дуже багато мікробів і коронавірус не виняток.</p>
                                     </div>
                                 </div>
                             </div>
@@ -343,8 +352,8 @@
                                 <div class="prof-block">
                                     <div class="p-wrap">
                                         <img src="{% static 'img/prof2.svg' %}" alt="">
-                                        <h4>Уникати контакту з людьми з ознаками ГРВІ</h4>
-                                        <p>Якщо ви змушені залишати свій будинок, то потрібно уникати контакту з людьми, які мають ознаки ГРВІ. Варто обходити тих, хто чхає \ кашляють на вулицях, тримати соц. дистанцію і, зрозуміло, надягати маску, бажано при виході з дому.</p>
+                                        <h4>Уникай контакту з хворими</h4>
+                                        <p>Намагайся не спілкуватися з людьми у яких є симптоми коронавируса, так-як отн їх дуже легко заразитися.</p>
                                     </div>
                                 </div>
                             </div>
@@ -354,7 +363,7 @@
                                         <img src="{% static 'img/prof3.svg' %}" alt="">
                                         <h4>
 Обробка продуктів харчування</h4>
-                                        <p>Якщо ви збираєтеся вживати продукти, які не були упаковані в магазині, то слід проводити їх термічну обробку або обробку водою. Наприклад, для фруктів буде досить промивання над гарячою водою, а ось сире м'ясо або сирі яйця обов'язково потрібно зварити або посмажити.</p>
+                                        <p>Обов'язково треба мити не тільки руки, але і продукти. На заморожених продуктах, коронавірус може триматися 2-3 місяці!</p>
                                     </div>
                                 </div>
                             </div>
@@ -363,7 +372,7 @@
                                     <div class="p-wrap">
                                         <img src="{% static 'img/prof4.svg' %}" alt="">
                                         <h4>Дотримуватися режиму самоізоляції</h4>
-                                        <p>Найпростіше правило - мінімізація часу знаходження на вулиці. Це допоможе уникнути зараження від незнайомих людей повітряно-крапельним шляхом. Потрібно утриматися від прогулянок, обмежуючись лише походами на роботу, навчання або в магазин.</p>
+                                        <p>Намагайся якомога більше перебувати вдома, так у тебе буде набагато менше шансом заразиться.</p>
                                     </div>
                                 </div>
                             </div>
