--- a/chuchman/mpage/templates/mpage/index.html
+++ b/chuchman/mpage/templates/mpage/index.html
@@ -26,7 +26,7 @@
                         <a class="lang-text-p" href="/ua">Українська</a>
                     </div>
                     <div class="lang-text">
-                        <a class="lang-text-p" href="https://chuchman.herokuapp.com">Русский</a>
+                        <a class="lang-text-p" href="">Русский</a>
                     </div>
                     <div class="lang-text">
                         <a class="lang-text-p" href="/en">English</a>
@@ -36,17 +36,14 @@
             <div class="header-text">
                 <h1>Коронавирус-инфо<br /></h1>
             </div>
-            <!--
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn">Для детей</button></div>
-                        <div class="col"><button class="header-age-btn">Для подростков</button></div>
-                        <div class="col"><button class="header-age-btn">Для взрослых</button></div>
+                        <div class="col"><button class="header-age-btn" href="/chill">Для детей</button></div>
+                        <div class="col"><button class="header-age-btn" href="">Для взрослых</button></div>
                     </div>
                 </div>
             </div>
--->
         </div>
         <div class="section-1">
             <div class="container">
