--- a/mpage/templates/mpage/index-ua-ch.html
+++ b/mpage/templates/mpage/index-ua-ch.html
@@ -38,8 +38,8 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn href="/ua/chill">Для дітей</button></div>
-                        <div class="col"><button class="header-age-btn href="/ua/">Для дорослих</button></div>
+                        <div class="col"><button class="header-age-btn" href="/ua/child">Для дітей</button></div>
+                        <div class="col"><button class="header-age-btn" href="/ua/">Для дорослих</button></div>
                     </div>
                 </div>
             </div>
