--- a/mpage/templates/mpage/index-en-ch.html
+++ b/mpage/templates/mpage/index-en-ch.html
@@ -39,7 +39,7 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn" href="/en/chill">For kids</button></div>
+                        <div class="col"><button class="header-age-btn" href="/en/child">For kids</button></div>
                         <div class="col"><button class="header-age-btn" href="/en/">For adults</button></div>
                     </div>
                 </div>
