--- a/mpage/templates/mpage/index-en.html
+++ b/mpage/templates/mpage/index-en.html
@@ -38,7 +38,7 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn" href="/en/chill">Для детей</button></div>
+                        <div class="col"><button class="header-age-btn" href="/en/child">Для детей</button></div>
                         <div class="col"><button class="header-age-btn" href="/en">Для взрослых</button></div>
                     </div>
                 </div>
