--- a/mpage/templates/mpage/index.html
+++ b/mpage/templates/mpage/index.html
@@ -39,7 +39,7 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn" href="/chill">Для детей</button></div>
+                        <div class="col"><button class="header-age-btn" href="/child">Для детей</button></div>
                         <div class="col"><button class="header-age-btn" href="">Для взрослых</button></div>
                     </div>
                 </div>
