--- a/mpage/templates/mpage/index-en.html
+++ b/mpage/templates/mpage/index-en.html
@@ -25,7 +25,7 @@
                         <a class="lang-text-p" href="/ua">Українська</a>
                     </div>
                     <div class="lang-text">
-                        <a class="lang-text-p" href="">Русский</a>
+                        <a class="lang-text-p" href="/ru">Русский</a>
                     </div>
                     <div class="lang-text">
                         <a class="lang-text-p" href="/en">English</a>
