--- a/mpage/templates/mpage/index-ua-ch.html
+++ b/mpage/templates/mpage/index-ua-ch.html
@@ -39,7 +39,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col"><button class="header-age-btn" href="/ua/child">Для дітей</button></div>
-                        <div class="col"><button class="header-age-btn" href="/ua/">Для дорослих</button></div>
+                        <div class="col"><button class="header-age-btn" href="/ua">Для дорослих</button></div>
                     </div>
                 </div>
             </div>
