--- a/mpage/templates/mpage/index.html
+++ b/mpage/templates/mpage/index.html
@@ -39,8 +39,8 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn" href="/child">Для детей</button></div>
-                        <div class="col"><button class="header-age-btn" href="">Для взрослых</button></div>
+                        <div class="col"><button class="header-age-btn" href="/ru/child">Для детей</button></div>
+                        <div class="col"><button class="header-age-btn" href="/ru">Для взрослых</button></div>
                     </div>
                 </div>
             </div>
