--- a/mpage/templates/mpage/index.html
+++ b/mpage/templates/mpage/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8">
     <title>Коронавирус-инфо</title>
+    <link rel="shortcut icon" href="{% static 'img/title.svg' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script type="text/javascript" src="{% static 'js/jquery-3.5.1.js' %}"></script>
