--- a/mpage/templates/mpage/index-ua.html
+++ b/mpage/templates/mpage/index-ua.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Коронавірус-інфо</title>
-    <link rel="shortcut icon" href="{% static 'img/title.svg' %}">
+    <link rel="shortcut icon" href="{% static 'img/title.ico' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script type="text/javascript" src="{% static 'js/jquery-3.5.1.js' %}"></script>
