--- a/mpage/templates/mpage/index-ch.html
+++ b/mpage/templates/mpage/index-ch.html
@@ -4,6 +4,7 @@
 <head>
 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Коронавирус-инфо</title>
     <link rel="shortcut icon" href="{% static 'img/title.ico' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
