--- a/mpage/templates/mpage/index-ua.html
+++ b/mpage/templates/mpage/index-ua.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Коронавірус-інфо</title>
     <link rel="shortcut icon" href="{% static 'img/title.ico' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
