--- a/mpage/templates/mpage/index.html
+++ b/mpage/templates/mpage/index.html
@@ -41,8 +41,8 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn" href="/ru/child">Для детей</button></div>
-                        <div class="col"><button class="header-age-btn" href="/ru">Для взрослых</button></div>
+                        <div class="col"><form action="/ru/child" target="_blank"><button class="header-age-btn">Для детей</button></form></div>
+                        <div class="col"><form action="/ru" target="_blank"><button class="header-age-btn">Для взрослых</button></form></div>
                     </div>
                 </div>
             </div>
