--- a/mpage/templates/mpage/index-en.html
+++ b/mpage/templates/mpage/index-en.html
@@ -40,8 +40,8 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn" href="/en/child">Для детей</button></div>
-                        <div class="col"><button class="header-age-btn" href="/en">Для взрослых</button></div>
+                        <div class="col"><form action="/en"><button class="header-age-btn">For kids</button></form></div>
+                        <div class="col"><form action="/en-child"><button class="header-age-btn">For adults</button></form></div>
                     </div>
                 </div>
             </div>
