--- a/mpage/templates/mpage/index-en-ch.html
+++ b/mpage/templates/mpage/index-en-ch.html
@@ -41,8 +41,8 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><button class="header-age-btn" href="/en/child">For kids</button></div>
-                        <div class="col"><button class="header-age-btn" href="/en/">For adults</button></div>
+                        <div class="col"><form action="/en"><button class="header-age-btn">For kids</button></form></div>
+                        <div class="col"><form action="/en-child"><button class="header-age-btn">For adults</button></form></div>
                     </div>
                 </div>
             </div>
