--- a/mpage/templates/mpage/index-ua.html
+++ b/mpage/templates/mpage/index-ua.html
@@ -40,8 +40,8 @@
             <div class="header-age">
                 <div class="container">
                     <div class="row">
-                        <div class="col"><form action="/ua"><button class="header-age-btn">Для дітей</button></form></div>
-                        <div class="col"><form action="/ua-child"><button class="header-age-btn">Для дорослих</button></form></div>
+                        <div class="col"><form action="/ua-child"><button class="header-age-btn">Для дітей</button></form></div>
+                        <div class="col"><form action="/ua"><button class="header-age-btn">Для дорослих</button></form></div>
                     </div>
                 </div>
             </div>
